# switchboard

./: .gitignore  LICENSE  Makefile  README.md
cli/: TODO.md
cli/src/: go.mod  go.sum  main.go
cli/src/assets/: embedded.go
cli/src/cmd/: add.go  deploy.go  logs.go  new.go  package.go  root.go  teardown.go
cli/src/core/: deployer.go  deployer_test.go  logs.go  scaffolder.go  scaffolder_test.go  types.go  utils.go  utils_test.go
cli/src/tests/: core_test.go
cli/src/tui/: init.go  views.go
cli/src/wizard/: input.go  select.go
cli/templates/aws/: .gitignore.template  README.md.template  executor.py.template  iam_policy.json  tasks.py.template
cli/templates/default-aws/: tasks.py.template
docs/: admin.md
examples/aws-demo/: README.md  TODO.md  deploy.sh  iam_policy.json  package.sh  register_resources.py  trigger_workflow.py
examples/basic-aws-demo/: README.md  tasks.py
py/: __init__.py  main.py  pyproject.toml
py/src/: __init__.py  db.py  main.py
py/src/switchboard/: __init__.py  cloud.py  conditionals.py  db.py  invocation.py  response.py  schemas.py  workflow.py
py/tests/: workflow_test.py
sdk/py/: TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt
sdk/py/src/switchboard/: __init__.py  cloud.py  db.py  enums.py  executor.py  invocation.py  logging_config.py  queue.py  response.py  schemas.py  workflow.py
sdk/py/tests/: workflow_test.py
sdk/py/tests/integration/: db.py  tasks.py  test_workflow_integration.py
sdk/py/tests/integration/cloud/: test_aws.py
test_env/: Dockerfile  docker-compose.yml
(+46 files in other folders)
