[project]
name = "switchboard"
version = "0.1.0"
description = "The Python SDK for the switchboard framework."
authors = [{ name = "osteensco", email = "osteensco@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
