[project]
name = "switchboard"
version = "0.1.0"
description = "The Python SDK for the switchboard framework."
authors = [{ name = "osteensco"}]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = ["integration: marks tests as integration tests"]
